--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,39 +2,30 @@ version: '3.8'
 
 services:
   # Layanan untuk Oracle XE
-  oracle:
+  db:
     image: gvenzl/oracle-xe:latest
-    container_name: oracle-xe
+    container_name: oracle-new
     ports:
-      - "1521:1521"   # Oracle listener port
-      - "5500:5500"   # Oracle Enterprise Manager (opsional)
+      - 1521:1521
     environment:
-      - ORACLE_PWD=yourpassword    # Password untuk pengguna system
-      - ORACLE_SID=XEPDB1
-      - ORACLE_CHARACTERSET=AL32UTF8
-    volumes:
-      - oracle-data:/opt/oracle/oradata
-    restart: always
-
+      ORACLE_PASSWORD: yourpassword
+      ORACLE_DATABASE: XEPDB8
   # Layanan untuk aplikasi Go
   golang-ora:
     build:
       context: .
-      dockerfile: Dockerfile
     container_name: golang-ora
-    depends_on:
-      - oracle
+    ports:
+      - "3000:3000" 
     environment:
       - DB_USER=system
       - DB_PASSWORD=yourpassword
-      - DB_HOST=localhost
+      - DB_HOST=db
       - DB_PORT=1521
-      - DB_SID=XEPDB1
-    ports:
-      - "3000:3000"  # Aplikasi Go akan berjalan di port 3000
-    command: ["go", "run", "main.go"]
-    restart: on-failure
-
+      - DB_SID=XEPDB8
+    depends_on:
+      - db
+    command: ["sh", "-c", "sleep 60 && go run main.go"] # Menggabungkan penundaan dengan perintah untuk menjalankan aplikasi Go
 volumes:
   oracle-data:
     driver: local
