--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,36 @@
-# Node.js
-node_modules/
-npm-debug.log
+# Go specific
+*.exe
+*.exe~
+*.dll
+*.so
+*.dylib
+*.test
+*.out
+go.work
 
-# Python
-__pycache__/
-*.py[cod]
-*.env
+# Environment variables
+.env
 
-# Java
-*.class
-*.jar
-*.war
-
-# IDEs
+# IDE specific
 .vscode/
 .idea/
 *.sublime-workspace
 *.sublime-project
 
+# Dependency directories
+vendor/
+
+# Binary directory
+bin/
+
+# Debug files
+debug/
+
 # OS generated files
 .DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
 Thumbs.db
